--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required (VERSION 3.11)
+cmake_minimum_required (VERSION 3.15)
 project (gobot)
 
+include(cmake/CPM.cmake)
 
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
     message(
@@ -15,14 +16,12 @@ find_package(spdlog REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
 
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 
 find_package (Eigen3 3.3 REQUIRED)
-find_package(OpenGL REQUIRED)
 
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 
@@ -54,4 +53,12 @@ target_link_libraries(gobot_editor
         PUBLIC
         gobot
         Qt5::Widgets
+        nlohmann_json
         )
+
+option(BUILD_EXPERIMENT "using imgui and glfw" OFF)
+if (BUILD_EXPERIMENT)
+    add_subdirectory(experiment)
+endif ()
+
+
