--- a/experiment/CMakeLists.txt
+++ b/experiment/CMakeLists.txt
@@ -1,25 +1,58 @@
 
-add_subdirectory(glfw)
-add_subdirectory(glad)
 
-# Dear ImGui
-set(IMGUI_DIR imgui)
-include_directories(${IMGUI_DIR} ${IMGUI_DIR}/backends ..)
+# GLAD
+CPMAddPackage(
+        NAME glad
+        GITHUB_REPOSITORY Dav1dde/glad
+        VERSION 0.1.33
+        OPTIONS
+        "GLAD_PROFILE core"
+        "GLAD_API gl=4.5"
+)
+
+CPMAddPackage(
+        NAME glfw
+        GITHUB_REPOSITORY glfw/glfw
+        GIT_TAG 3.3.8
+        OPTIONS
+        "GLFW_BUILD_TESTS Off"
+        "GLFW_BUILD_EXAMPLES Off"
+        "GLFW_BUILD_DOCS Off"
+        "GLFW_INSTALL Off"
+        "GLFW_USE_HYBRID_HPG On"
+)
+
 
 # Libraries
 find_package(Vulkan REQUIRED)
-#find_library(VULKAN_LIBRARY
-#NAMES vulkan vulkan-1)
-#set(LIBRARIES "glfw;${VULKAN_LIBRARY}")
-set(LIBRARIES "glfw;Vulkan::Vulkan")
 
-# Use vulkan headers from glfw:
-#include_directories(${GLFW_DIR}/deps)
+CPMAddPackage(
+        NAME ImGui
+        GITHUB_REPOSITORY ocornut/imgui
+        GIT_TAG master
+        DOWNLOAD_ONLY YES
+)
 
-#file(GLOB sources *.cpp)
+# Dear ImGui
+if (ImGui_ADDED)
+    add_library(DearImGui
+            ${ImGui_SOURCE_DIR}/imgui.cpp ${ImGui_SOURCE_DIR}/imgui_draw.cpp
+            ${ImGui_SOURCE_DIR}/imgui_tables.cpp ${ImGui_SOURCE_DIR}/imgui_widgets.cpp
+            ${ImGui_SOURCE_DIR}/imgui_demo.cpp
+            ${ImGui_SOURCE_DIR}/backends/imgui_impl_vulkan.cpp ${ImGui_SOURCE_DIR}/backends/imgui_impl_glfw.cpp)
 
-add_executable(example_glfw_vulkan imgui/examples/example_glfw_vulkan/main.cpp ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp ${IMGUI_DIR}/backends/imgui_impl_vulkan.cpp ${IMGUI_DIR}/imgui.cpp ${IMGUI_DIR}/imgui_draw.cpp ${IMGUI_DIR}/imgui_demo.cpp ${IMGUI_DIR}/imgui_tables.cpp ${IMGUI_DIR}/imgui_widgets.cpp)
-target_link_libraries(example_glfw_vulkan ${LIBRARIES})
+    target_include_directories(DearImGui PUBLIC ${ImGui_SOURCE_DIR})
+    target_link_libraries(DearImGui Vulkan::Vulkan glfw)
+endif ()
 
+file(GLOB_RECURSE EXPERIMENT_SOURCE CONFIGURE_DEPENDS "src/*.cpp")
 
+add_executable(glfw_main ${EXPERIMENT_SOURCE} )
+target_link_libraries(glfw_main
+        PUBLIC
+        glad
+        Vulkan::Vulkan
+        glfw
+        gobot
+        )
 
