--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -26,6 +26,13 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
 
+    - name: Install Eigen3
+      uses: kupns-aka-kupa/setup-eigen3@v1
+      with:
+        version: 3.4.0
+      env:
+        CMAKE_GENERATOR: ${{ matrix.gen }}
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
