--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdpart/rttr"]
 	path = 3rdpart/rttr
-	url = https://github.com/Wuqiqi123/rttr.git
+	url = git@github.com:Wuqiqi123/rttr.git
