--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -19,7 +19,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      submodules: 'true'
+      with:
+        submodules: 'true'
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
