--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -22,15 +22,8 @@ jobs:
       with:
         submodules: 'true'
 
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v3
-
-    - name: Install Eigen3
-      uses: kupns-aka-kupa/setup-eigen3@v1
-      with:
-        version: 3.4.0
-      env:
-        CMAKE_GENERATOR: ${{ matrix.gen }}
+    - name: Get Conan
+      uses: turtlebrowser/get-conan@v1.1
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
