--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -21,6 +21,8 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: 'true'
+    - name: Setup gl
+      run: sudo apt update && sudo apt install -y libgl-dev
 
     - name: Get Conan
       uses: turtlebrowser/get-conan@v1.1
