fix intrusive_ptr cmake

--- a/3rdpart/CMakeLists.txt
+++ b/3rdpart/CMakeLists.txt
@@ -1,7 +1,2 @@
 add_subdirectory(rttr)
-
-add_library(intrusive_ptr INTERFACE)
-target_include_directories(intrusive_ptr INTERFACE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/intrusive_ptr>
-        $<INSTALL_INTERFACE:include/intrusive_ptr>
-        )
+add_subdirectory(intrusive_ptr)
