--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "3rdpart/rttr"]
-	path = 3rdpart/rttr
+[submodule "3rdparty/rttr"]
+	path = 3rdparty/rttr
 	url = git@github.com:Wuqiqi123/rttr.git
