change gtest to GTest

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,6 @@
 #https://modern-cmake-cn.github.io/Modern-CMake-zh_CN/chapters/testing/googletest.html
-message("------------------------------")
-message("CMAKE_PREFIX_PATH" "${CMAKE_BINARY_DIR}")
-message("CMAKE_MODULE_PATH" "${CMAKE_BINARY_DIR}")
 
-find_package(gtest CONFIG REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
 include(GoogleTest)
 mark_as_advanced(
