--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -30,10 +30,10 @@ jobs:
       env:
         cache-name: cache-conan-packages
       with:
-        path: ${{ env.CONAN_USER_HOME }}
+        path: ~/.conan/data
         key: host-${{ runner.os }}-target-${{ runner.os }}-${{ hashFiles('conanfile.txt') }}
         restore-keys: |
-          ${{ runner.os }}-target-${{ runner.os }}-
+          host-${{ runner.os }}-target-${{ runner.os }}-
      
     - if: ${{ steps.cache-conan-packages.outputs.cache-hit != 'true' }}
       name: List the state of node modules
