--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -36,7 +36,7 @@ jobs:
           host-${{ runner.os }}-target-${{ runner.os }}-
      
     - if: ${{ steps.cache-conan-packages.outputs.cache-hit != 'true' }}
-      name: List the state of node modules
+      name: Show CONAN_USER_HOME storage location
       continue-on-error: true
       run: echo $CONAN_USER_HOME
 
