Managed to compile and run on Windows 10 (#4)
* Managed to compile and run on Windows 10

* Fix workflow

* Install opengl in workflow

* fix conan

* fix version

* fix cmake

* add code

* include profile default

* fix profile build

* add config sudo

* add gtest

* fix gtest

* use conan generated module path

* fix intrusive_ptr cmake

* fix typos and fix cmake var

* debug action

* change gtest to GTest

* add cache action

* fix action

* change cmake version

* fix

Co-authored-by: Qiqi Wu <1258552199@qq.com>

--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -22,15 +22,23 @@ jobs:
       with:
         submodules: 'true'
 
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v3
+    - name: Get Conan
+      uses: turtlebrowser/get-conan@v1.1
 
-    - name: Install Eigen3
-      uses: kupns-aka-kupa/setup-eigen3@v1
-      with:
-        version: 3.4.0
+    - name: Set Conan cache
+      uses: actions/cache@v3
       env:
-        CMAKE_GENERATOR: ${{ matrix.gen }}
+        cache-name: cache-conan-packages
+      with:
+        path: ~/.conan/data
+        key: host-${{ runner.os }}-target-${{ runner.os }}-${{ hashFiles('conanfile.txt') }}
+        restore-keys: |
+          host-${{ runner.os }}-target-${{ runner.os }}-
+     
+    - if: ${{ steps.cache-conan-packages.outputs.cache-hit != 'true' }}
+      name: Show CONAN_USER_HOME storage location
+      continue-on-error: true
+      run: echo $CONAN_USER_HOME
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
