--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,29 +1,18 @@
-CPMAddPackage(
-        NAME googletest
-        GITHUB_REPOSITORY google/googletest
-        GIT_TAG release-1.12.1
-        VERSION 1.12.1
-        OPTIONS
-        "INSTALL_GTEST OFF"
-        "gtest_force_shared_crt ON"
-        "BUILD_GMOCK ON"
-)
 #https://modern-cmake-cn.github.io/Modern-CMake-zh_CN/chapters/testing/googletest.html
-if(googletest_ADDED)
-    include(GoogleTest)
-    mark_as_advanced(
-            BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
-            gmock_build_tests gtest_build_samples gtest_build_tests
-            gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
-    )
-    set_target_properties(gtest PROPERTIES FOLDER extern)
-    set_target_properties(gtest_main PROPERTIES FOLDER extern)
-    set_target_properties(gmock PROPERTIES FOLDER extern)
-    set_target_properties(gmock_main PROPERTIES FOLDER extern)
-    message(STATUS "gtest configured correctly")
-else()
-    message(ERROR "gtest was not configured properly")
-endif()
+
+find_package(GTest CONFIG REQUIRED)
+
+include(GoogleTest)
+mark_as_advanced(
+        BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
+        gmock_build_tests gtest_build_samples gtest_build_tests
+        gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
+)
+set_target_properties(GTest::gtest PROPERTIES FOLDER extern)
+set_target_properties(GTest::gtest_main PROPERTIES FOLDER extern)
+set_target_properties(GTest::gmock PROPERTIES FOLDER extern)
+set_target_properties(GTest::gmock_main PROPERTIES FOLDER extern)
+message(STATUS "gtest configured correctly")
 
 
 macro(package_add_test TESTNAME FILES)
