--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,14 +91,14 @@ endif ()
 
 target_include_directories(gobot
     PUBLIC
-    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 target_link_libraries(gobot
-        PUBLIC
-        RTTR::Core
-        intrusive_ptr
-        ${CONAN_LIBS}
+    PUBLIC
+    RTTR::Core
+    intrusive_ptr
+    ${CONAN_LIBS}
 )
 
 set_target_properties(gobot
