--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,7 +18,7 @@ message(STATUS "gtest configured correctly")
 macro(package_add_test TESTNAME FILES)
     add_executable(${TESTNAME} ${FILES})
     target_link_libraries(${TESTNAME} gtest gmock gtest_main)
-    target_link_libraries(${TESTNAME} -Wl,--no-as-needed  gobot)
+    target_link_libraries(${TESTNAME} -Wl,--no-as-needed gobot_rttr gobot)
     # gtest_discover_tests replaces gtest_add_tests,
     # see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
     gtest_discover_tests(${TESTNAME}
