--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,3 +37,4 @@ package_add_test(test_variant_serializer core/io/test_variant_serializer.cpp)
 package_add_test(test_resource_format_scene core/io/test_resource_format_scene.cpp)
 
 package_add_test(test_node_path scene/test_node_path.cpp)
+package_add_test(test_box_mesh scene/test_primitive_mesh.cpp)
