--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,11 @@ jobs:
         restore-keys: |
           host-${{ runner.os }}-target-${{ runner.os }}-
 
+    - name: Setup tmate session
+      if: ${{ matrix.os == 'windows-latest' }}
+      uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 15
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
