--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,6 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    env:
-      CONAN_USER_HOME: ~/conan_data
-
     steps:
     - uses: actions/checkout@v3
       with:
@@ -39,21 +36,21 @@ jobs:
       env:
         cache-name: cache-conan-packages
       with:
-        path: ~/conan_data
+        path: ~/.conan
         key: host-${{ runner.os }}-target-${{ runner.os }}-${{ hashFiles('conanfile.txt') }}
         restore-keys: |
           host-${{ runner.os }}-target-${{ runner.os }}-
+
+    - name: Setup tmate session
+      if: ${{ matrix.os == 'windows-latest' }}
+      uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 15
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_EXPERIMENT=OFF -DBUILD_TESTS=On
 
-    - name: Setup tmate session
-      if: ${{ matrix.os == 'windows-latest' }}
-      uses: mxschmitt/action-tmate@v3
-      timeout-minutes: 30
-        
     #- name: Build
     #   Build your program with the given configuration
     #  run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
