--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,6 @@ jobs:
         restore-keys: |
           host-${{ runner.os }}-target-${{ runner.os }}-
 
-    - name: Setup tmate session
-      if: ${{ matrix.os == 'windows-latest' }}
-      uses: mxschmitt/action-tmate@v3
-      timeout-minutes: 15
-
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -60,3 +55,12 @@ jobs:
     #   Execute tests defined by the CMake configuration.
     #   See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
     #  run: ctest -C ${{env.BUILD_TYPE}}
+
+    - name: Print cache directory size
+      if: ${{ failure() && matrix.os == 'windows-latest' }}
+      run: Get-ChildItem ~/.conan | Measure-Object -Property Length -sum
+
+    - name: Setup tmate session
+      if: ${{ failure() }}
+      uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 15
