--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,9 @@ jobs:
     #   See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
     #  run: ctest -C ${{env.BUILD_TYPE}}
 
-    - name: Print cache directory size
+    - name: Print cache directory
       if: ${{ failure() && matrix.os == 'windows-latest' }}
-      run: Get-ChildItem ~/.conan | Measure-Object -Property Length -sum
+      run: tree ~/.conan /a /f
 
     - name: Setup tmate session
       if: ${{ failure() }}
