--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,9 @@ jobs:
     #   See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
     #  run: ctest -C ${{env.BUILD_TYPE}}
 
+    - name: Print cache directory1
+      run: tree C:/Users/runneradmin/.conan /a /f
+
     - name: Print cache directory
       if: ${{ failure() && matrix.os == 'windows-latest' }}
       run: tree C:/Users/runneradmin/.conan /a /f
